# Codeops

./: .coverage  .cursorrules  .env.example  .flake8  .gitcommit  .gitconfig.local  .gitignore  .gitmodules  .pre-commit-config.yaml  1  Agents.MD  Agents.md  BRANCHING.md  COMMUNICATION_STATUS.md  CONTRIBUTING.md  CURSOR_INSTRUCTIONS.md  CURSOR_SETTINGS_GUIDE.md  CURSOR_SETUP_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  FUNCTIONS.md  GEMINI_IMPLEMENTATION_GUIDE.md  GEMINI_MESSAGE.txt  GEMINI_TASK_PLAN.md  GITHUB_AUTOMATION.md  GIT_LOCAL_BRANCHES.md  IMPLEMENTATION_STATUS.md  INTEGRATION_PLAN.md  LOG_2025-12-04T16-52-06.md  LOG_2025-12-04T16-52-18.md  LOG_2025-12-04T16-52-26.md  PLAN.md  PROJECT_STATUS.md  PROTECTION.md  RAG_SYSTEM_README.md  README.md  RESTRUCTURE_SUMMARY.md  ROADMAP.md  TEST_RESULTS.md  (+35 more)
.cursor/rules/: python.mdc  workflow.mdc
.github/: CODEOWNERS  DEPLOYMENT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  WORKFLOWS.md  branch-sync-config.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: agent-validation.yml  branch-sync.yml  ci.yml  dependabot-auto-merge.yml  dependency-updates.yml  health-monitoring.yml  main-pipeline.yml  merge-orchestrator.yml  release.yml  security.yml  telemetry-collector.yml  worker-nodes.yml  workspace-sync.yml
.tunnel/: antigravity_heartbeat  antigravity_outbox.jsonl  cursor_inbox.jsonl  gemini_heartbeat  gemini_inbox.jsonl  shared_state.json
CodeAgents/: ANALYSIS_SUMMARY_2025-12-04T16-52-07Z.md  README.md  access_control.json
CodeAgents/Antigravity/: telemetry.json
CodeAgents/Errors/: error_intelligence.py  self_healing.py
CodeAgents/Evaluation/: __init__.py
CodeAgents/GitHub/: __init__.py  comment_processor.py  optimization_catalog.py
CodeAgents/Memory/: ClaudeCode.md  Composer.md  GPT-5.1-Codex.md  GPT-5.1Codex.md  GeminiFlash25.md  GeminiPro25.md  GeminiPro30.md  GrokIA.md  Jules.md  TEMPLATE.md
CodeAgents/Training/: CHANGELOG.md  QUICKSTART.md  README.md  THRENDIA_INTEGRATION.md  requirements.txt  simple_training.py  structure_report.json  train_session.py
CodeAgents/VibeCode/: __init__.py
CodeAgents/backend/: main.py
CodeAgents/core/: README.md  __init__.py  access_control.py  metrics.py  rag.py  telemetry.py
CodeAgents/schemas/: error_schema.json  operation_schema.json
Structures/: README.md
Task1/: Instructions1.MD
agent-workflow-app/: .gitignore  LICENSE  README.md
agent-workflow-app/backend/: app.py  pyproject.toml
agent-workflow-app/backend/app/: __init__.py  config.py  datastore.py  models.py
agent-workflow-app/backend/app/routes/: __init__.py  skeleton.py  telemetry.py  workflows.py
agent-workflow-app/backend/tests/: test_api.py
agent-workflow-app/docs/: analysis.md  deployment.md
agent-workflow-app/frontend/: index.html  package.json  vite.config.ts
agent-workflow-app/infrastructure/: docker-compose.yml
agents/claude-code/: README.md
agents/deepseek-r1/: README.md
agents/gpt-5-codex/: README.md
agents/kfc/: design.md  impl.md  judge.md  requirements.md  system-prompt-loader.md  tasks.md  test.md
backend/: Sugestions.MD  Suggestions.MD  main.py  requirements.txt
backend/core/: __init__.py  rag_engine.py  telemetry.py  vector_store.py
backend/django_api/: README.md
backend/java_services/: README.md
chroma_db/: chroma.sqlite3
config/: error_patterns.yaml  kfc-settings.json  optimization_patterns.yaml  quality_thresholds.yaml  token_budgets.yaml
core/: __init__.py
database/chroma_db/: README.md
docs/: ARCHITECTURE.md  DATABASE.md  SKELETON_STRUCTURE.md  WORKFLOW.md  WORKFLOWS.md
evaluation/: __init__.py
frontend/: README.md
frontend_prototype/: app.py
frontend_prototype/pages/: 1_Dashboard.py  2_Agents.py  3_Chat.py
github/: __init__.py
github-deploy/: .gitignore  DEPLOYMENT_SUMMARY.md  README.md
market_analysis/firecrawl/: README.md
market_analysis/playwright/: README.md
market_analysis/trend_radar/: README.md
models/loras/: anime.safetensors
nodes/anime4k/: node.py  node.yaml
nodes/civitai/: node.py  node.yaml
nodes/clip_eval/: node.py
nodes/comfyui/: README.md  node.py  node.yaml  workflow_template.json
nodes/denoiser/: node.py
nodes/firecrawl/: node.py
nodes/flux/: node.py
nodes/gas_tracker/: node.py  node.yaml
nodes/gemini_analysis/: node.py  node.yaml
nodes/google_genai/: node.py
scripts/: deploy.ps1  deploy.sh  index_gitcommit_to_chromadb.py  init_memory.py  rag_gitcommit_faiss.py  test_rag_system.py
skeleton-generator/: USAGE_GUIDE.md
test_analysis/: README.md
tests/: conftest.py  debug_chroma.py  debug_default_embedding.py  debug_embedding.py  test_integration_simulations.py  test_integrations.py  test_intensive.py  test_nodes.py  test_rag.py  test_real_simulations.py  test_telemetry.py  test_vector_store.py
tools/: optimization_cli.py
workflow-project/: README.md  SETUP.md
workflows/: pipeline.yaml
(+175 files in other folders)
