[project]
name = "eudorax"
version = "1.0.0"
description = "Multi-agent AI development platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EudoraX Contributors"}
]
keywords = ["ai", "agents", "telemetry", "rag", "code-generation", "multi-agent", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/training",
    "packages/evaluation",
    "packages/github-integration",
    "packages/error-intelligence",
    "packages/vibecode",
    "packages/memory",
    "packages/backend-api",
    "packages/skeleton-generator",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pydocstyle>=6.3.0",
    "interrogate>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
