[project]
name = "agent-workflow-backend"
version = "0.1.0"
description = "Flask API powering the Agent Workflow App"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "pydantic==2.6.4",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
]

